feat: update 'kitty' themes to use new color definitions
This commit updates all 'kitty' themes (dark and light variants) to align with the new color definitions established as the norm for terminal emulators.

--- a/extras/kitty/themes/dark/oasis_abyss_dark.conf
+++ b/extras/kitty/themes/dark/oasis_abyss_dark.conf
@@ -32,8 +32,8 @@ foreground               #F0EBE6
 background               #000000
 
 # Selection
-selection_background     #5A3824
-selection_foreground     #F0EBE6
+selection_background     #532E2E
+selection_foreground     #000000
 
 # Cursor
 cursor                   #F0E68C
@@ -41,10 +41,10 @@ cursor_text_color        #000000
 
 # Borders (panes)
 active_border_color      #D06666
-inactive_border_color    #666666
+inactive_border_color    #080808
 
 # Tabs
 active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #39494F
+active_tab_background    #D06666
+inactive_tab_foreground  #D06666
 inactive_tab_background  #080808
