--- a/extras/kitty/themes/dark/oasis_cactus_dark.conf
+++ b/extras/kitty/themes/dark/oasis_cactus_dark.conf
@@ -37,14 +37,14 @@ selection_foreground     #DDF0E5
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #1C261E
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #7FBB82
+inactive_border_color    #2C3A30
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #4B5F4F
+active_tab_foreground    #1C261E
+active_tab_background    #7FBB82
+inactive_tab_foreground  #7FBB82
 inactive_tab_background  #2C3A30
