--- a/extras/kitty/themes/dark/oasis_dune_dark.conf
+++ b/extras/kitty/themes/dark/oasis_dune_dark.conf
@@ -32,19 +32,19 @@ foreground               #E8E5DA
 background               #2E2620
 
 # Selection
-selection_background     #335668
+selection_background     #5A3824
 selection_foreground     #E8E5DA
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #2E2620
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #BDB76B
+inactive_border_color    #3C332C
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #6B5A4A
+active_tab_foreground    #2E2620
+active_tab_background    #BDB76B
+inactive_tab_foreground  #BDB76B
 inactive_tab_background  #3C332C
