--- a/extras/kitty/themes/dark/oasis_rose_dark.conf
+++ b/extras/kitty/themes/dark/oasis_rose_dark.conf
@@ -37,14 +37,14 @@ selection_foreground     #EDD5E7
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #301828
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #FFA0A0
+inactive_border_color    #3E2636
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #6A4F60
+active_tab_foreground    #301828
+active_tab_background    #FFA0A0
+inactive_tab_foreground  #FFA0A0
 inactive_tab_background  #3E2636
