--- a/extras/kitty/themes/dark/oasis_starlight_dark.conf
+++ b/extras/kitty/themes/dark/oasis_starlight_dark.conf
@@ -32,7 +32,7 @@ foreground               #FAF7F0
 background               #000000
 
 # Selection
-selection_background     #4D4528
+selection_background     #5A3824
 selection_foreground     #FAF7F0
 
 # Cursor
@@ -40,11 +40,11 @@ cursor                   #F0E68C
 cursor_text_color        #000000
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #58B8FD
+inactive_border_color    #080808
 
 # Tabs
 active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #4E5A6A
+active_tab_background    #58B8FD
+inactive_tab_foreground  #58B8FD
 inactive_tab_background  #080808
