--- a/extras/kitty/themes/dark/oasis_twilight_dark.conf
+++ b/extras/kitty/themes/dark/oasis_twilight_dark.conf
@@ -37,14 +37,14 @@ selection_foreground     #E6E0F8
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #221B2F
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #C28EFF
+inactive_border_color    #2B243B
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #5D4E7E
+active_tab_foreground    #221B2F
+active_tab_background    #C28EFF
+inactive_tab_foreground  #C28EFF
 inactive_tab_background  #2B243B
