--- a/extras/kitty/themes/light/1/oasis_dune_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_dune_light_1.conf
@@ -32,19 +32,19 @@ foreground               #58554c
 background               #f9f8f5
 
 # Selection
-selection_background     #e8e4d8
-selection_foreground     #58554c
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #696323
-cursor_text_color        #555555
+cursor                   #6d6219
+cursor_text_color        #f9f8f5
 
 # Borders (panes)
-active_border_color      #a54040
-inactive_border_color    #555555
+active_border_color      #58563c
+inactive_border_color    #f3f1eb
 
 # Tabs
-active_tab_foreground    #555555
-active_tab_background    #696323
-inactive_tab_foreground  #7b7166
+active_tab_foreground    #f9f8f5
+active_tab_background    #726d36
+inactive_tab_foreground  #726d36
 inactive_tab_background  #f3f1eb
