--- a/extras/kitty/themes/light/1/oasis_lagoon_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_lagoon_light_1.conf
@@ -32,19 +32,19 @@ foreground               #40577a
 background               #f9fafb
 
 # Selection
-selection_background     #dde3e9
-selection_foreground     #40577a
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #6a6423
-cursor_text_color        #565656
+cursor                   #1665aa
+cursor_text_color        #f9fafb
 
 # Borders (panes)
-active_border_color      #a74141
-inactive_border_color    #565656
+active_border_color      #245b81
+inactive_border_color    #f0f2f5
 
 # Tabs
-active_tab_foreground    #565656
-active_tab_background    #6a6423
-inactive_tab_foreground  #617784
+active_tab_foreground    #f9fafb
+active_tab_background    #0861a0
+inactive_tab_foreground  #0861a0
 inactive_tab_background  #f0f2f5
