--- a/extras/kitty/themes/light/1/oasis_midnight_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_midnight_light_1.conf
@@ -32,19 +32,19 @@ foreground               #5c534c
 background               #f9f6f5
 
 # Selection
-selection_background     #e8dcd8
-selection_foreground     #5c534c
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #696223
-cursor_text_color        #545454
+cursor                   #b7292e
+cursor_text_color        #f9f6f5
 
 # Borders (panes)
-active_border_color      #a44040
-inactive_border_color    #545454
+active_border_color      #8c3a3a
+inactive_border_color    #f3edeb
 
 # Tabs
-active_tab_foreground    #545454
-active_tab_background    #696223
-inactive_tab_foreground  #68737c
+active_tab_foreground    #f9f6f5
+active_tab_background    #7d2b2b
+inactive_tab_foreground  #7d2b2b
 inactive_tab_background  #f3edeb
