--- a/extras/kitty/themes/light/1/oasis_mirage_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_mirage_light_1.conf
@@ -32,19 +32,19 @@ foreground               #455b5b
 background               #f9fbfa
 
 # Selection
-selection_background     #dde9e3
-selection_foreground     #455b5b
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #6b6424
-cursor_text_color        #575757
+cursor                   #356c63
+cursor_text_color        #f9fbfa
 
 # Borders (panes)
-active_border_color      #a74141
-inactive_border_color    #575757
+active_border_color      #395d58
+inactive_border_color    #f0f5f2
 
 # Tabs
-active_tab_foreground    #575757
-active_tab_background    #6b6424
-inactive_tab_foreground  #687776
+active_tab_foreground    #f9fbfa
+active_tab_background    #34746c
+inactive_tab_foreground  #34746c
 inactive_tab_background  #f0f5f2
