--- a/extras/kitty/themes/light/1/oasis_night_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_night_light_1.conf
@@ -32,19 +32,19 @@ foreground               #52422d
 background               #e0dbcc
 
 # Selection
-selection_background     #cfc7af
-selection_foreground     #52422d
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #57511d
-cursor_text_color        #444444
+cursor                   #7b410d
+cursor_text_color        #e0dbcc
 
 # Borders (panes)
-active_border_color      #883535
-inactive_border_color    #444444
+active_border_color      #742d2d
+inactive_border_color    #dbd5c2
 
 # Tabs
-active_tab_foreground    #444444
-active_tab_background    #57511d
-inactive_tab_foreground  #6e5e53
+active_tab_foreground    #e0dbcc
+active_tab_background    #8c1c1c
+inactive_tab_foreground  #8c1c1c
 inactive_tab_background  #dbd5c2
