--- a/extras/kitty/themes/light/1/oasis_rose_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_rose_light_1.conf
@@ -32,19 +32,19 @@ foreground               #694e63
 background               #fbf9fb
 
 # Selection
-selection_background     #e9dde9
-selection_foreground     #694e63
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #6a6423
-cursor_text_color        #565656
+cursor                   #c3151c
+cursor_text_color        #fbf9fb
 
 # Borders (panes)
-active_border_color      #a64141
-inactive_border_color    #565656
+active_border_color      #a32626
+inactive_border_color    #f5f0f5
 
 # Tabs
-active_tab_foreground    #565656
-active_tab_background    #6a6423
-inactive_tab_foreground  #806f7a
+active_tab_foreground    #fbf9fb
+active_tab_background    #a20707
+inactive_tab_foreground  #a20707
 inactive_tab_background  #f5f0f5
