--- a/extras/kitty/themes/light/1/oasis_sol_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_sol_light_1.conf
@@ -32,19 +32,19 @@ foreground               #814236
 background               #f9f5f5
 
 # Selection
-selection_background     #e8d8d8
-selection_foreground     #814236
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #686223
-cursor_text_color        #545454
+cursor                   #b6282c
+cursor_text_color        #f9f5f5
 
 # Borders (panes)
-active_border_color      #a33f3f
-inactive_border_color    #545454
+active_border_color      #8f3838
+inactive_border_color    #f3ebeb
 
 # Tabs
-active_tab_foreground    #545454
-active_tab_background    #686223
-inactive_tab_foreground  #806d6a
+active_tab_foreground    #f9f5f5
+active_tab_background    #8c1c1c
+inactive_tab_foreground  #8c1c1c
 inactive_tab_background  #f3ebeb
