--- a/extras/kitty/themes/light/2/oasis_abyss_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_abyss_light_2.conf
@@ -32,19 +32,19 @@ foreground               #585048
 background               #f8f0e7
 
 # Selection
-selection_background     #eedac3
-selection_foreground     #585048
+selection_background     #e19d9d
+selection_foreground     #4e0e0e
 
 # Cursor
-cursor                   #655f22
-cursor_text_color        #515151
+cursor                   #b42328
+cursor_text_color        #f8f0e7
 
 # Borders (panes)
-active_border_color      #9e3e3e
-inactive_border_color    #515151
+active_border_color      #873838
+inactive_border_color    #f5e9db
 
 # Tabs
-active_tab_foreground    #515151
-active_tab_background    #655f22
-inactive_tab_foreground  #647076
+active_tab_foreground    #f8f0e7
+active_tab_background    #762828
+inactive_tab_foreground  #762828
 inactive_tab_background  #f5e9db
