--- a/extras/kitty/themes/light/2/oasis_cactus_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_cactus_light_2.conf
@@ -32,19 +32,19 @@ foreground               #44584c
 background               #eef7f2
 
 # Selection
-selection_background     #cfe8da
-selection_foreground     #44584c
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #686123
-cursor_text_color        #535353
+cursor                   #3e6940
+cursor_text_color        #eef7f2
 
 # Borders (panes)
-active_border_color      #a13f3f
-inactive_border_color    #535353
+active_border_color      #425943
+inactive_border_color    #e4f2ea
 
 # Tabs
-active_tab_foreground    #535353
-active_tab_background    #686123
-inactive_tab_foreground  #667469
+active_tab_foreground    #eef7f2
+active_tab_background    #38663b
+inactive_tab_foreground  #38663b
 inactive_tab_background  #e4f2ea
