--- a/extras/kitty/themes/light/2/oasis_canyon_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_canyon_light_2.conf
@@ -32,19 +32,19 @@ foreground               #624e35
 background               #f8f0e7
 
 # Selection
-selection_background     #eedac3
-selection_foreground     #624e35
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #655f22
-cursor_text_color        #515151
+cursor                   #8f4c10
+cursor_text_color        #f8f0e7
 
 # Borders (panes)
-active_border_color      #9e3e3e
-inactive_border_color    #515151
+active_border_color      #73471b
+inactive_border_color    #f5e9db
 
 # Tabs
-active_tab_foreground    #515151
-active_tab_background    #655f22
-inactive_tab_foreground  #7d6b5e
+active_tab_foreground    #f8f0e7
+active_tab_background    #994e05
+inactive_tab_foreground  #994e05
 inactive_tab_background  #f5e9db
