--- a/extras/kitty/themes/light/2/oasis_dune_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_dune_light_2.conf
@@ -32,19 +32,19 @@ foreground               #57544b
 background               #f9f6ec
 
 # Selection
-selection_background     #eee5c9
-selection_foreground     #57544b
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #686123
-cursor_text_color        #545454
+cursor                   #6b611a
+cursor_text_color        #f9f6ec
 
 # Borders (panes)
-active_border_color      #a34040
-inactive_border_color    #545454
+active_border_color      #57553b
+inactive_border_color    #f5f0e0
 
 # Tabs
-active_tab_foreground    #545454
-active_tab_background    #686123
-inactive_tab_foreground  #7a7066
+active_tab_foreground    #f9f6ec
+active_tab_background    #6c6733
+inactive_tab_foreground  #6c6733
 inactive_tab_background  #f5f0e0
