--- a/extras/kitty/themes/light/2/oasis_lagoon_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_lagoon_light_2.conf
@@ -32,19 +32,19 @@ foreground               #3d5273
 background               #ebf1f9
 
 # Selection
-selection_background     #c8d8ee
-selection_foreground     #3d5273
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #655e22
-cursor_text_color        #515151
+cursor                   #135fa2
+cursor_text_color        #ebf1f9
 
 # Borders (panes)
-active_border_color      #9d3d3d
-inactive_border_color    #515151
+active_border_color      #205579
+inactive_border_color    #dfe9f5
 
 # Tabs
-active_tab_foreground    #515151
-active_tab_background    #655e22
-inactive_tab_foreground  #5d717e
+active_tab_foreground    #ebf1f9
+active_tab_background    #065c98
+inactive_tab_foreground  #065c98
 inactive_tab_background  #dfe9f5
