--- a/extras/kitty/themes/light/2/oasis_midnight_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_midnight_light_2.conf
@@ -32,19 +32,19 @@ foreground               #584f48
 background               #f8eee7
 
 # Selection
-selection_background     #eed5c3
-selection_foreground     #584f48
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #655e22
-cursor_text_color        #505050
+cursor                   #b0272c
+cursor_text_color        #f8eee7
 
 # Borders (panes)
-active_border_color      #9d3d3d
-inactive_border_color    #505050
+active_border_color      #863838
+inactive_border_color    #f5e6db
 
 # Tabs
-active_tab_foreground    #505050
-active_tab_background    #655e22
-inactive_tab_foreground  #656f77
+active_tab_foreground    #f8eee7
+active_tab_background    #762828
+inactive_tab_foreground  #762828
 inactive_tab_background  #f5e6db
