--- a/extras/kitty/themes/light/2/oasis_mirage_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_mirage_light_2.conf
@@ -32,19 +32,19 @@ foreground               #425858
 background               #ebf9f9
 
 # Selection
-selection_background     #c8eeee
-selection_foreground     #425858
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #686123
-cursor_text_color        #545454
+cursor                   #356962
+cursor_text_color        #ebf9f9
 
 # Borders (panes)
-active_border_color      #a34040
-inactive_border_color    #545454
+active_border_color      #375b55
+inactive_border_color    #dff5f5
 
 # Tabs
-active_tab_foreground    #545454
-active_tab_background    #686123
-inactive_tab_foreground  #657572
+active_tab_foreground    #ebf9f9
+active_tab_background    #316e66
+inactive_tab_foreground  #316e66
 inactive_tab_background  #dff5f5
