--- a/extras/kitty/themes/light/2/oasis_night_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_night_light_2.conf
@@ -32,19 +32,19 @@ foreground               #54432d
 background               #e9deb9
 
 # Selection
-selection_background     #decd96
-selection_foreground     #54432d
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #59531e
-cursor_text_color        #464646
+cursor                   #7e430e
+cursor_text_color        #e9deb9
 
 # Borders (panes)
-active_border_color      #8b3636
-inactive_border_color    #464646
+active_border_color      #772e2e
+inactive_border_color    #e5d8ae
 
 # Tabs
-active_tab_foreground    #464646
-active_tab_background    #59531e
-inactive_tab_foreground  #705f54
+active_tab_foreground    #e9deb9
+active_tab_background    #851a1a
+inactive_tab_foreground  #851a1a
 inactive_tab_background  #e5d8ae
