--- a/extras/kitty/themes/light/2/oasis_rose_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_rose_light_2.conf
@@ -32,19 +32,19 @@ foreground               #61495c
 background               #f9ecf5
 
 # Selection
-selection_background     #eec9e3
-selection_foreground     #61495c
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #645e22
-cursor_text_color        #505050
+cursor                   #b8141b
+cursor_text_color        #f9ecf5
 
 # Borders (panes)
-active_border_color      #9c3d3d
-inactive_border_color    #505050
+active_border_color      #982424
+inactive_border_color    #f5e0ef
 
 # Tabs
-active_tab_foreground    #505050
-active_tab_background    #645e22
-inactive_tab_foreground  #796973
+active_tab_foreground    #f9ecf5
+active_tab_background    #990505
+inactive_tab_foreground  #990505
 inactive_tab_background  #f5e0ef
