--- a/extras/kitty/themes/light/2/oasis_sol_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_sol_light_2.conf
@@ -32,19 +32,19 @@ foreground               #793e33
 background               #f8eae7
 
 # Selection
-selection_background     #eecbc3
-selection_foreground     #793e33
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #635c21
-cursor_text_color        #4f4f4f
+cursor                   #ad262a
+cursor_text_color        #f8eae7
 
 # Borders (panes)
-active_border_color      #9a3c3c
-inactive_border_color    #4f4f4f
+active_border_color      #863434
+inactive_border_color    #f5e0db
 
 # Tabs
-active_tab_foreground    #4f4f4f
-active_tab_background    #635c21
-inactive_tab_foreground  #796865
+active_tab_foreground    #f8eae7
+active_tab_background    #851a1a
+inactive_tab_foreground  #851a1a
 inactive_tab_background  #f5e0db
