--- a/extras/kitty/themes/light/2/oasis_twilight_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_twilight_light_2.conf
@@ -32,19 +32,19 @@ foreground               #544975
 background               #efecf9
 
 # Selection
-selection_background     #d2c9ee
-selection_foreground     #544975
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #635d21
-cursor_text_color        #4f4f4f
+cursor                   #7f18e1
+cursor_text_color        #efecf9
 
 # Borders (panes)
-active_border_color      #9b3d3d
-inactive_border_color    #4f4f4f
+active_border_color      #6732a6
+inactive_border_color    #e5e0f5
 
 # Tabs
-active_tab_foreground    #4f4f4f
-active_tab_background    #635d21
-inactive_tab_foreground  #6f697d
+active_tab_foreground    #efecf9
+active_tab_background    #490599
+inactive_tab_foreground  #490599
 inactive_tab_background  #e5e0f5
