--- a/extras/kitty/themes/light/3/oasis_abyss_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_abyss_light_3.conf
@@ -32,19 +32,19 @@ foreground               #524b43
 background               #f7e5d4
 
 # Selection
-selection_background     #f0cead
-selection_foreground     #524b43
+selection_background     #e19d9d
+selection_foreground     #4e0e0e
 
 # Cursor
-cursor                   #605920
-cursor_text_color        #4c4c4c
+cursor                   #aa2126
+cursor_text_color        #f7e5d4
 
 # Borders (panes)
-active_border_color      #953a3a
-inactive_border_color    #4c4c4c
+active_border_color      #7e3535
+inactive_border_color    #f5ddc7
 
 # Tabs
-active_tab_foreground    #4c4c4c
-active_tab_background    #605920
-inactive_tab_foreground  #5f6b6e
+active_tab_foreground    #f7e5d4
+active_tab_background    #702424
+inactive_tab_foreground  #702424
 inactive_tab_background  #f5ddc7
