--- a/extras/kitty/themes/light/3/oasis_cactus_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_cactus_light_3.conf
@@ -32,19 +32,19 @@ foreground               #405348
 background               #e0f0e7
 
 # Selection
-selection_background     #c1e1cf
-selection_foreground     #405348
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #625c21
-cursor_text_color        #4e4e4e
+cursor                   #3a643d
+cursor_text_color        #e0f0e7
 
 # Borders (panes)
-active_border_color      #993c3c
-inactive_border_color    #4e4e4e
+active_border_color      #3e543f
+inactive_border_color    #d6ebdf
 
 # Tabs
-active_tab_foreground    #4e4e4e
-active_tab_background    #625c21
-inactive_tab_foreground  #626e64
+active_tab_foreground    #e0f0e7
+active_tab_background    #346036
+inactive_tab_foreground  #346036
 inactive_tab_background  #d6ebdf
