--- a/extras/kitty/themes/light/3/oasis_canyon_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_canyon_light_3.conf
@@ -32,19 +32,19 @@ foreground               #5d4a33
 background               #f7e7d4
 
 # Selection
-selection_background     #f0d1ad
-selection_foreground     #5d4a33
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #615a20
-cursor_text_color        #4d4d4d
+cursor                   #89480f
+cursor_text_color        #f7e7d4
 
 # Borders (panes)
-active_border_color      #963b3b
-inactive_border_color    #4d4d4d
+active_border_color      #6d431a
+inactive_border_color    #f5e0c7
 
 # Tabs
-active_tab_foreground    #4d4d4d
-active_tab_background    #615a20
-inactive_tab_foreground  #776659
+active_tab_foreground    #f7e7d4
+active_tab_background    #914903
+inactive_tab_foreground  #914903
 inactive_tab_background  #f5e0c7
