--- a/extras/kitty/themes/light/3/oasis_desert_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_desert_light_3.conf
@@ -32,19 +32,19 @@ foreground               #5a4a38
 background               #f7e7d4
 
 # Selection
-selection_background     #f0d1ad
-selection_foreground     #5a4a38
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #615a20
-cursor_text_color        #4d4d4d
+cursor                   #645918
+cursor_text_color        #f7e7d4
 
 # Borders (panes)
-active_border_color      #963b3b
-inactive_border_color    #4d4d4d
+active_border_color      #7f3535
+inactive_border_color    #f5e0c7
 
 # Tabs
-active_tab_foreground    #4d4d4d
-active_tab_background    #615a20
-inactive_tab_foreground  #606b70
+active_tab_foreground    #f7e7d4
+active_tab_background    #702424
+inactive_tab_foreground  #702424
 inactive_tab_background  #f5e0c7
