--- a/extras/kitty/themes/light/3/oasis_dune_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_dune_light_3.conf
@@ -32,19 +32,19 @@ foreground               #525047
 background               #f4efdd
 
 # Selection
-selection_background     #e9dfba
-selection_foreground     #525047
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #645d21
-cursor_text_color        #505050
+cursor                   #685c19
+cursor_text_color        #f4efdd
 
 # Borders (panes)
-active_border_color      #9b3d3d
-inactive_border_color    #505050
+active_border_color      #535139
+inactive_border_color    #f0ead1
 
 # Tabs
-active_tab_foreground    #505050
-active_tab_background    #645d21
-inactive_tab_foreground  #766b62
+active_tab_foreground    #f4efdd
+active_tab_background    #65612f
+inactive_tab_foreground  #65612f
 inactive_tab_background  #f0ead1
