--- a/extras/kitty/themes/light/3/oasis_midnight_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_midnight_light_3.conf
@@ -32,19 +32,19 @@ foreground               #524943
 background               #f7e2d4
 
 # Selection
-selection_background     #f0c8ad
-selection_foreground     #524943
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5e581f
-cursor_text_color        #4b4b4b
+cursor                   #a52429
+cursor_text_color        #f7e2d4
 
 # Borders (panes)
-active_border_color      #933a3a
-inactive_border_color    #4b4b4b
+active_border_color      #7c3434
+inactive_border_color    #f5d9c7
 
 # Tabs
-active_tab_foreground    #4b4b4b
-active_tab_background    #5e581f
-inactive_tab_foreground  #606970
+active_tab_foreground    #f7e2d4
+active_tab_background    #702424
+inactive_tab_foreground  #702424
 inactive_tab_background  #f5d9c7
