--- a/extras/kitty/themes/light/3/oasis_mirage_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_mirage_light_3.conf
@@ -32,19 +32,19 @@ foreground               #405454
 background               #dbf5f5
 
 # Selection
-selection_background     #b7ebeb
-selection_foreground     #405454
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #655e21
-cursor_text_color        #505050
+cursor                   #32655d
+cursor_text_color        #dbf5f5
 
 # Borders (panes)
-active_border_color      #9d3e3e
-inactive_border_color    #505050
+active_border_color      #355752
+inactive_border_color    #cff2f2
 
 # Tabs
-active_tab_foreground    #505050
-active_tab_background    #655e21
-inactive_tab_foreground  #62706f
+active_tab_foreground    #dbf5f5
+active_tab_background    #2d6760
+inactive_tab_foreground  #2d6760
 inactive_tab_background  #cff2f2
