--- a/extras/kitty/themes/light/3/oasis_night_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_night_light_3.conf
@@ -32,19 +32,19 @@ foreground               #52412d
 background               #e6dbb2
 
 # Selection
-selection_background     #dbca8f
-selection_foreground     #52412d
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #57511d
-cursor_text_color        #444444
+cursor                   #7c410d
+cursor_text_color        #e6dbb2
 
 # Borders (panes)
-active_border_color      #883535
-inactive_border_color    #444444
+active_border_color      #742d2d
+inactive_border_color    #e2d5a6
 
 # Tabs
-active_tab_foreground    #444444
-active_tab_background    #57511d
-inactive_tab_foreground  #6d5e52
+active_tab_foreground    #e6dbb2
+active_tab_background    #7d1717
+inactive_tab_foreground  #7d1717
 inactive_tab_background  #e2d5a6
