--- a/extras/kitty/themes/light/3/oasis_sol_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_sol_light_3.conf
@@ -32,19 +32,19 @@ foreground               #6d382e
 background               #f7d9d4
 
 # Selection
-selection_background     #f0b7ad
-selection_foreground     #6d382e
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5b541e
-cursor_text_color        #474747
+cursor                   #9f2326
+cursor_text_color        #f7d9d4
 
 # Borders (panes)
-active_border_color      #8c3737
-inactive_border_color    #474747
+active_border_color      #792f2f
+inactive_border_color    #f5cec7
 
 # Tabs
-active_tab_foreground    #474747
-active_tab_background    #5b541e
-inactive_tab_foreground  #70605e
+active_tab_foreground    #f7d9d4
+active_tab_background    #7d1717
+inactive_tab_foreground  #7d1717
 inactive_tab_background  #f5cec7
