--- a/extras/kitty/themes/light/3/oasis_starlight_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_starlight_light_3.conf
@@ -32,19 +32,19 @@ foreground               #564f3e
 background               #f4eddd
 
 # Selection
-selection_background     #e9dbba
-selection_foreground     #564f3e
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #645d21
-cursor_text_color        #4f4f4f
+cursor                   #135d9e
+cursor_text_color        #f4eddd
 
 # Borders (panes)
-active_border_color      #9a3d3d
-inactive_border_color    #4f4f4f
+active_border_color      #205378
+inactive_border_color    #f0e7d1
 
 # Tabs
-active_tab_foreground    #4f4f4f
-active_tab_background    #645d21
-inactive_tab_foreground  #656d76
+active_tab_foreground    #f4eddd
+active_tab_background    #05558f
+inactive_tab_foreground  #05558f
 inactive_tab_background  #f0e7d1
