--- a/extras/kitty/themes/light/3/oasis_twilight_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_twilight_light_3.conf
@@ -32,19 +32,19 @@ foreground               #4a4268
 background               #e2ddf4
 
 # Selection
-selection_background     #c4bae9
-selection_foreground     #4a4268
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5b541e
-cursor_text_color        #474747
+cursor                   #7416cd
+cursor_text_color        #e2ddf4
 
 # Borders (panes)
-active_border_color      #8d3737
-inactive_border_color    #474747
+active_border_color      #5d2c96
+inactive_border_color    #d8d1f0
 
 # Tabs
-active_tab_foreground    #474747
-active_tab_background    #5b541e
-inactive_tab_foreground  #676173
+active_tab_foreground    #e2ddf4
+active_tab_background    #440391
+inactive_tab_foreground  #440391
 inactive_tab_background  #d8d1f0
