--- a/extras/kitty/themes/light/4/oasis_abyss_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_abyss_light_4.conf
@@ -32,19 +32,19 @@ foreground               #4e473f
 background               #f5ddc7
 
 # Selection
-selection_background     #eec5a0
-selection_foreground     #4e473f
+selection_background     #e19d9d
+selection_foreground     #4e0e0e
 
 # Cursor
-cursor                   #5b551f
-cursor_text_color        #484848
+cursor                   #a22024
+cursor_text_color        #f5ddc7
 
 # Borders (panes)
-active_border_color      #8e3838
-inactive_border_color    #484848
+active_border_color      #773232
+inactive_border_color    #f3d5ba
 
 # Tabs
-active_tab_foreground    #484848
-active_tab_background    #5b551f
-inactive_tab_foreground  #5b666b
+active_tab_foreground    #f5ddc7
+active_tab_background    #692121
+inactive_tab_foreground  #692121
 inactive_tab_background  #f3d5ba
