--- a/extras/kitty/themes/light/4/oasis_cactus_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_cactus_light_4.conf
@@ -32,19 +32,19 @@ foreground               #405147
 background               #d6f0e1
 
 # Selection
-selection_background     #b4e4c8
-selection_foreground     #405147
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #615a20
-cursor_text_color        #4d4d4d
+cursor                   #3a623c
+cursor_text_color        #d6f0e1
 
 # Borders (panes)
-active_border_color      #973b3b
-inactive_border_color    #4d4d4d
+active_border_color      #3d523e
+inactive_border_color    #cbecd9
 
 # Tabs
-active_tab_foreground    #4d4d4d
-active_tab_background    #615a20
-inactive_tab_foreground  #606d63
+active_tab_foreground    #d6f0e1
+active_tab_background    #305a32
+inactive_tab_foreground  #305a32
 inactive_tab_background  #cbecd9
