--- a/extras/kitty/themes/light/4/oasis_canyon_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_canyon_light_4.conf
@@ -32,19 +32,19 @@ foreground               #574630
 background               #f5dfc7
 
 # Selection
-selection_background     #eec9a0
-selection_foreground     #574630
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5c561f
-cursor_text_color        #494949
+cursor                   #82450e
+cursor_text_color        #f5dfc7
 
 # Borders (panes)
-active_border_color      #8f3838
-inactive_border_color    #494949
+active_border_color      #674019
+inactive_border_color    #f3d8ba
 
 # Tabs
-active_tab_foreground    #494949
-active_tab_background    #5c561f
-inactive_tab_foreground  #736256
+active_tab_foreground    #f5dfc7
+active_tab_background    #884401
+inactive_tab_foreground  #884401
 inactive_tab_background  #f3d8ba
