--- a/extras/kitty/themes/light/4/oasis_lagoon_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_lagoon_light_4.conf
@@ -32,19 +32,19 @@ foreground               #334561
 background               #c9dcf7
 
 # Selection
-selection_background     #a1c2f1
-selection_foreground     #334561
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #57511d
-cursor_text_color        #444444
+cursor                   #11528a
+cursor_text_color        #c9dcf7
 
 # Borders (panes)
-active_border_color      #873535
-inactive_border_color    #444444
+active_border_color      #1c4766
+inactive_border_color    #bcd3f5
 
 # Tabs
-active_tab_foreground    #444444
-active_tab_background    #57511d
-inactive_tab_foreground  #51636e
+active_tab_foreground    #c9dcf7
+active_tab_background    #035087
+inactive_tab_foreground  #035087
 inactive_tab_background  #bcd3f5
