--- a/extras/kitty/themes/light/4/oasis_mirage_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_mirage_light_4.conf
@@ -32,19 +32,19 @@ foreground               #3e5252
 background               #cdf4f4
 
 # Selection
-selection_background     #a7ecec
-selection_foreground     #3e5252
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #625c21
-cursor_text_color        #4f4f4f
+cursor                   #31635c
+cursor_text_color        #cdf4f4
 
 # Borders (panes)
-active_border_color      #993c3c
-inactive_border_color    #4f4f4f
+active_border_color      #345550
+inactive_border_color    #c0f1f1
 
 # Tabs
-active_tab_foreground    #4f4f4f
-active_tab_background    #625c21
-inactive_tab_foreground  #616e6d
+active_tab_foreground    #cdf4f4
+active_tab_background    #29615a
+inactive_tab_foreground  #29615a
 inactive_tab_background  #c0f1f1
