--- a/extras/kitty/themes/light/4/oasis_night_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_night_light_4.conf
@@ -32,19 +32,19 @@ foreground               #4f3f2b
 background               #e3d7aa
 
 # Selection
-selection_background     #d8c688
-selection_foreground     #4f3f2b
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #544f1c
-cursor_text_color        #424242
+cursor                   #773f0d
+cursor_text_color        #e3d7aa
 
 # Borders (panes)
-active_border_color      #843434
-inactive_border_color    #424242
+active_border_color      #702b2b
+inactive_border_color    #e0d19f
 
 # Tabs
-active_tab_foreground    #424242
-active_tab_background    #544f1c
-inactive_tab_foreground  #6b5b50
+active_tab_foreground    #e3d7aa
+active_tab_background    #751414
+inactive_tab_foreground  #751414
 inactive_tab_background  #e0d19f
