--- a/extras/kitty/themes/light/4/oasis_rose_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_rose_light_4.conf
@@ -32,19 +32,19 @@ foreground               #513d4b
 background               #f3ceea
 
 # Selection
-selection_background     #eaa9da
-selection_foreground     #513d4b
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #56501d
-cursor_text_color        #434343
+cursor                   #9f1116
+cursor_text_color        #f3ceea
 
 # Borders (panes)
-active_border_color      #863434
-inactive_border_color    #434343
+active_border_color      #7f1f1f
+inactive_border_color    #f0c2e5
 
 # Tabs
-active_tab_foreground    #434343
-active_tab_background    #56501d
-inactive_tab_foreground  #6a5b64
+active_tab_foreground    #f3ceea
+active_tab_background    #880101
+inactive_tab_foreground  #880101
 inactive_tab_background  #f0c2e5
