--- a/extras/kitty/themes/light/4/oasis_sol_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_sol_light_4.conf
@@ -32,19 +32,19 @@ foreground               #64332a
 background               #f5cdc7
 
 # Selection
-selection_background     #eeaaa0
-selection_foreground     #64332a
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #544e1c
-cursor_text_color        #414141
+cursor                   #942023
+cursor_text_color        #f5cdc7
 
 # Borders (panes)
-active_border_color      #833333
-inactive_border_color    #414141
+active_border_color      #6f2b2b
+inactive_border_color    #f3c1ba
 
 # Tabs
-active_tab_foreground    #414141
-active_tab_background    #544e1c
-inactive_tab_foreground  #695a57
+active_tab_foreground    #f5cdc7
+active_tab_background    #751414
+inactive_tab_foreground  #751414
 inactive_tab_background  #f3c1ba
