--- a/extras/kitty/themes/light/4/oasis_twilight_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_twilight_light_4.conf
@@ -32,19 +32,19 @@ foreground               #433a5c
 background               #d7cef3
 
 # Selection
-selection_background     #b9a9ea
-selection_foreground     #433a5c
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #524c1b
-cursor_text_color        #3f3f3f
+cursor                   #6914ba
+cursor_text_color        #d7cef3
 
 # Borders (panes)
-active_border_color      #803232
-inactive_border_color    #3f3f3f
+active_border_color      #532784
+inactive_border_color    #cdc2f0
 
 # Tabs
-active_tab_foreground    #3f3f3f
-active_tab_background    #524c1b
-inactive_tab_foreground  #5e5969
+active_tab_foreground    #d7cef3
+active_tab_background    #3f0188
+inactive_tab_foreground  #3f0188
 inactive_tab_background  #cdc2f0
