--- a/extras/kitty/themes/light/5/oasis_abyss_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_abyss_light_5.conf
@@ -32,19 +32,19 @@ foreground               #48413b
 background               #f3d2ba
 
 # Selection
-selection_background     #ecb893
-selection_foreground     #48413b
+selection_background     #e19d9d
+selection_foreground     #4e0e0e
 
 # Cursor
-cursor                   #554f1c
-cursor_text_color        #424242
+cursor                   #981e22
+cursor_text_color        #f3d2ba
 
 # Borders (panes)
-active_border_color      #853434
-inactive_border_color    #424242
+active_border_color      #6f2e2e
+inactive_border_color    #f1c9ad
 
 # Tabs
-active_tab_foreground    #424242
-active_tab_background    #554f1c
-inactive_tab_foreground  #566164
+active_tab_foreground    #f3d2ba
+active_tab_background    #621e1e
+inactive_tab_foreground  #621e1e
 inactive_tab_background  #f1c9ad
