--- a/extras/kitty/themes/light/5/oasis_cactus_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_cactus_light_5.conf
@@ -32,19 +32,19 @@ foreground               #3c4d44
 background               #cbebd7
 
 # Selection
-selection_background     #aadebe
-selection_foreground     #3c4d44
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5c561f
-cursor_text_color        #494949
+cursor                   #375e39
+cursor_text_color        #cbebd7
 
 # Borders (panes)
-active_border_color      #903939
-inactive_border_color    #494949
+active_border_color      #3b4e3c
+inactive_border_color    #c0e7cf
 
 # Tabs
-active_tab_foreground    #494949
-active_tab_background    #5c561f
-inactive_tab_foreground  #5d695f
+active_tab_foreground    #cbebd7
+active_tab_background    #2c532e
+inactive_tab_foreground  #2c532e
 inactive_tab_background  #c0e7cf
