--- a/extras/kitty/themes/light/5/oasis_dune_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_dune_light_5.conf
@@ -32,19 +32,19 @@ foreground               #4a4940
 background               #ece1c6
 
 # Selection
-selection_background     #e1cfa4
-selection_foreground     #4a4940
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5b551e
-cursor_text_color        #484848
+cursor                   #5e5517
+cursor_text_color        #ece1c6
 
 # Borders (panes)
-active_border_color      #8f3838
-inactive_border_color    #484848
+active_border_color      #4b4934
+inactive_border_color    #e8dbbb
 
 # Tabs
-active_tab_foreground    #484848
-active_tab_background    #5b551e
-inactive_tab_foreground  #6c635b
+active_tab_foreground    #ece1c6
+active_tab_background    #585527
+inactive_tab_foreground  #585527
 inactive_tab_background  #e8dbbb
