--- a/extras/kitty/themes/light/5/oasis_lagoon_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_lagoon_light_5.conf
@@ -32,19 +32,19 @@ foreground               #30405b
 background               #bcd6f5
 
 # Selection
-selection_background     #94beef
-selection_foreground     #30405b
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #524d1b
-cursor_text_color        #404040
+cursor                   #104d84
+cursor_text_color        #bcd6f5
 
 # Borders (panes)
-active_border_color      #803232
-inactive_border_color    #404040
+active_border_color      #1a435f
+inactive_border_color    #afcef3
 
 # Tabs
-active_tab_foreground    #404040
-active_tab_background    #524d1b
-inactive_tab_foreground  #4e5e69
+active_tab_foreground    #bcd6f5
+active_tab_background    #014b7e
+inactive_tab_foreground  #014b7e
 inactive_tab_background  #afcef3
