--- a/extras/kitty/themes/light/5/oasis_midnight_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_midnight_light_5.conf
@@ -32,19 +32,19 @@ foreground               #473f3a
 background               #f3cdba
 
 # Selection
-selection_background     #ecb193
-selection_foreground     #473f3a
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #534d1b
-cursor_text_color        #404040
+cursor                   #912125
+cursor_text_color        #f3cdba
 
 # Borders (panes)
-active_border_color      #813333
-inactive_border_color    #404040
+active_border_color      #6b2d2d
+inactive_border_color    #f1c4ad
 
 # Tabs
-active_tab_foreground    #404040
-active_tab_background    #534d1b
-inactive_tab_foreground  #565e64
+active_tab_foreground    #f3cdba
+active_tab_background    #621e1e
+inactive_tab_foreground  #621e1e
 inactive_tab_background  #f1c4ad
