--- a/extras/kitty/themes/light/5/oasis_mirage_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_mirage_light_5.conf
@@ -32,19 +32,19 @@ foreground               #3c5050
 background               #c0f2ee
 
 # Selection
-selection_background     #9aeae4
-selection_foreground     #3c5050
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #605a20
-cursor_text_color        #4c4c4c
+cursor                   #31605a
+cursor_text_color        #c0f2ee
 
 # Borders (panes)
-active_border_color      #953b3b
-inactive_border_color    #4c4c4c
+active_border_color      #32524d
+inactive_border_color    #b3efeb
 
 # Tabs
-active_tab_foreground    #4c4c4c
-active_tab_background    #605a20
-inactive_tab_foreground  #5e6c6b
+active_tab_foreground    #c0f2ee
+active_tab_background    #265a53
+inactive_tab_foreground  #265a53
 inactive_tab_background  #b3efeb
