--- a/extras/kitty/themes/light/5/oasis_night_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_night_light_5.conf
@@ -32,19 +32,19 @@ foreground               #4b3b28
 background               #e0cfa3
 
 # Selection
-selection_background     #d5bd81
-selection_foreground     #4b3b28
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #504b1a
-cursor_text_color        #3e3e3e
+cursor                   #713c0c
+cursor_text_color        #e0cfa3
 
 # Borders (panes)
-active_border_color      #7c3131
-inactive_border_color    #3e3e3e
+active_border_color      #6a2828
+inactive_border_color    #ddc998
 
 # Tabs
-active_tab_foreground    #3e3e3e
-active_tab_background    #504b1a
-inactive_tab_foreground  #65574d
+active_tab_foreground    #e0cfa3
+active_tab_background    #6e1212
+inactive_tab_foreground  #6e1212
 inactive_tab_background  #ddc998
