--- a/extras/kitty/themes/light/5/oasis_starlight_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_starlight_light_5.conf
@@ -32,19 +32,19 @@ foreground               #4d4738
 background               #f3deba
 
 # Selection
-selection_background     #eccb93
-selection_foreground     #4d4738
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5b551e
-cursor_text_color        #474747
+cursor                   #125592
+cursor_text_color        #f3deba
 
 # Borders (panes)
-active_border_color      #8d3838
-inactive_border_color    #474747
+active_border_color      #1e4b6c
+inactive_border_color    #f1d8ad
 
 # Tabs
-active_tab_foreground    #474747
-active_tab_background    #5b551e
-inactive_tab_foreground  #5e656e
+active_tab_foreground    #f3deba
+active_tab_background    #024a7e
+inactive_tab_foreground  #024a7e
 inactive_tab_background  #f1d8ad
