--- a/extras/kitty/themes/light/5/oasis_twilight_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_twilight_light_5.conf
@@ -32,19 +32,19 @@ foreground               #3b3351
 background               #cac2f0
 
 # Selection
-selection_background     #aa9de7
-selection_foreground     #3b3351
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #4a4518
-cursor_text_color        #383838
+cursor                   #6012a9
+cursor_text_color        #cac2f0
 
 # Borders (panes)
-active_border_color      #732d2d
-inactive_border_color    #383838
+active_border_color      #492375
+inactive_border_color    #bfb6ed
 
 # Tabs
-active_tab_foreground    #383838
-active_tab_background    #4a4518
-inactive_tab_foreground  #575262
+active_tab_foreground    #cac2f0
+active_tab_background    #3b0080
+inactive_tab_foreground  #3b0080
 inactive_tab_background  #bfb6ed
