--- a/extras/kitty/themes/dark/oasis_canyon_dark.conf
+++ b/extras/kitty/themes/dark/oasis_canyon_dark.conf
@@ -32,19 +32,19 @@ foreground               #F8E7D3
 background               #2F1A05
 
 # Selection
-selection_background     #335668
+selection_background     #5A3824
 selection_foreground     #F8E7D3
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #2F1A05
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #FFA247
+inactive_border_color    #402412
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #714F37
+active_tab_foreground    #2F1A05
+active_tab_background    #FFA247
+inactive_tab_foreground  #FFA247
 inactive_tab_background  #402412
