--- a/extras/kitty/themes/dark/oasis_desert_dark.conf
+++ b/extras/kitty/themes/dark/oasis_desert_dark.conf
@@ -32,19 +32,19 @@ foreground               #F7EDE1
 background               #333333
 
 # Selection
-selection_background     #335668
+selection_background     #5A3824
 selection_foreground     #F7EDE1
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #333333
 
 # Borders (panes)
 active_border_color      #D06666
-inactive_border_color    #666666
+inactive_border_color    #444444
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #566B76
+active_tab_foreground    #333333
+active_tab_background    #D06666
+inactive_tab_foreground  #D06666
 inactive_tab_background  #444444
