--- a/extras/kitty/themes/dark/oasis_lagoon_dark.conf
+++ b/extras/kitty/themes/dark/oasis_lagoon_dark.conf
@@ -37,14 +37,14 @@ selection_foreground     #D9E6FA
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #101825
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #1CA0FD
+inactive_border_color    #1A283F
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #30556d
+active_tab_foreground    #101825
+active_tab_background    #1CA0FD
+inactive_tab_foreground  #1CA0FD
 inactive_tab_background  #1A283F
