--- a/extras/kitty/themes/dark/oasis_midnight_dark.conf
+++ b/extras/kitty/themes/dark/oasis_midnight_dark.conf
@@ -37,14 +37,14 @@ selection_foreground     #F7F4F2
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #101418
 
 # Borders (panes)
 active_border_color      #D06666
-inactive_border_color    #666666
+inactive_border_color    #14181C
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #3F5160
+active_tab_foreground    #101418
+active_tab_background    #D06666
+inactive_tab_foreground  #D06666
 inactive_tab_background  #14181C
