--- a/extras/kitty/themes/dark/oasis_mirage_dark.conf
+++ b/extras/kitty/themes/dark/oasis_mirage_dark.conf
@@ -33,18 +33,18 @@ background               #18252A
 
 # Selection
 selection_background     #5A3824
-selection_foreground     #DDEFEF
+selection_foreground     #18252A
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #18252A
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #5ABAAE
+inactive_border_color    #1A2D33
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #475D5B
+active_tab_foreground    #18252A
+active_tab_background    #5ABAAE
+inactive_tab_foreground  #5ABAAE
 inactive_tab_background  #1A2D33
