--- a/extras/kitty/themes/dark/oasis_night_dark.conf
+++ b/extras/kitty/themes/dark/oasis_night_dark.conf
@@ -32,19 +32,19 @@ foreground               #F7F4E9
 background               #0D0D1A
 
 # Selection
-selection_background     #3E2F4A
+selection_background     #5A3824
 selection_foreground     #F7F4E9
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #0D0D1A
 
 # Borders (panes)
 active_border_color      #D06666
-inactive_border_color    #666666
+inactive_border_color    #06060E
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #4B4A61
+active_tab_foreground    #0D0D1A
+active_tab_background    #D06666
+inactive_tab_foreground  #D06666
 inactive_tab_background  #06060E
