--- a/extras/kitty/themes/dark/oasis_sol_dark.conf
+++ b/extras/kitty/themes/dark/oasis_sol_dark.conf
@@ -32,19 +32,19 @@ foreground               #FFE0DA
 background               #2F1815
 
 # Selection
-selection_background     #335668
+selection_background     #5A3824
 selection_foreground     #FFE0DA
 
 # Cursor
 cursor                   #F0E68C
-cursor_text_color        #000000
+cursor_text_color        #2F1815
 
 # Borders (panes)
-active_border_color      #D06666
-inactive_border_color    #666666
+active_border_color      #E87272
+inactive_border_color    #3A2521
 
 # Tabs
-active_tab_foreground    #000000
-active_tab_background    #F0E68C
-inactive_tab_foreground  #6B4F4A
+active_tab_foreground    #2F1815
+active_tab_background    #E87272
+inactive_tab_foreground  #E87272
 inactive_tab_background  #3A2521
