--- a/extras/kitty/themes/light/1/oasis_desert_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_desert_light_1.conf
@@ -32,19 +32,19 @@ foreground               #63523d
 background               #f9f7f5
 
 # Selection
-selection_background     #e8e0d8
-selection_foreground     #63523d
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #696223
-cursor_text_color        #555555
+cursor                   #6d6119
+cursor_text_color        #f9f7f5
 
 # Borders (panes)
-active_border_color      #a44040
-inactive_border_color    #555555
+active_border_color      #8d3b3b
+inactive_border_color    #f3efeb
 
 # Tabs
-active_tab_foreground    #555555
-active_tab_background    #696223
-inactive_tab_foreground  #687479
+active_tab_foreground    #f9f7f5
+active_tab_background    #7d2b2b
+inactive_tab_foreground  #7d2b2b
 inactive_tab_background  #f3efeb
