--- a/extras/kitty/themes/light/1/oasis_starlight_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_starlight_light_1.conf
@@ -32,19 +32,19 @@ foreground               #5c5442
 background               #f9f7f5
 
 # Selection
-selection_background     #e8e0d8
-selection_foreground     #5c5442
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #696223
-cursor_text_color        #555555
+cursor                   #1563a7
+cursor_text_color        #f9f7f5
 
 # Borders (panes)
-active_border_color      #a44040
-inactive_border_color    #555555
+active_border_color      #23597f
+inactive_border_color    #f3efeb
 
 # Tabs
-active_tab_foreground    #555555
-active_tab_background    #696223
-inactive_tab_foreground  #6b737d
+active_tab_foreground    #f9f7f5
+active_tab_background    #0961a0
+inactive_tab_foreground  #0961a0
 inactive_tab_background  #f3efeb
