--- a/extras/kitty/themes/light/1/oasis_twilight_light_1.conf
+++ b/extras/kitty/themes/light/1/oasis_twilight_light_1.conf
@@ -32,19 +32,19 @@ foreground               #5b4f7e
 background               #f9f9fb
 
 # Selection
-selection_background     #dddde9
-selection_foreground     #5b4f7e
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #6a6323
-cursor_text_color        #565656
+cursor                   #8724e7
+cursor_text_color        #f9f9fb
 
 # Borders (panes)
-active_border_color      #a64141
-inactive_border_color    #565656
+active_border_color      #6f35b4
+inactive_border_color    #f0f0f5
 
 # Tabs
-active_tab_foreground    #565656
-active_tab_background    #6a6323
-inactive_tab_foreground  #777085
+active_tab_foreground    #f9f9fb
+active_tab_background    #4e07a2
+inactive_tab_foreground  #4e07a2
 inactive_tab_background  #f0f0f5
