--- a/extras/kitty/themes/light/2/oasis_starlight_light_2.conf
+++ b/extras/kitty/themes/light/2/oasis_starlight_light_2.conf
@@ -32,19 +32,19 @@ foreground               #5b5341
 background               #f9f5ec
 
 # Selection
-selection_background     #eee3c9
-selection_foreground     #5b5341
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #686123
-cursor_text_color        #545454
+cursor                   #1462a7
+cursor_text_color        #f9f5ec
 
 # Borders (panes)
-active_border_color      #a23f3f
-inactive_border_color    #545454
+active_border_color      #23587e
+inactive_border_color    #f5efe0
 
 # Tabs
-active_tab_foreground    #545454
-active_tab_background    #686123
-inactive_tab_foreground  #6b717c
+active_tab_foreground    #f9f5ec
+active_tab_background    #075b98
+inactive_tab_foreground  #075b98
 inactive_tab_background  #f5efe0
