--- a/extras/kitty/themes/light/3/oasis_lagoon_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_lagoon_light_3.conf
@@ -32,19 +32,19 @@ foreground               #384b68
 background               #d9e5f7
 
 # Selection
-selection_background     #b3cbef
-selection_foreground     #384b68
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5d571f
-cursor_text_color        #4a4a4a
+cursor                   #125895
+cursor_text_color        #d9e5f7
 
 # Borders (panes)
-active_border_color      #913939
-inactive_border_color    #4a4a4a
+active_border_color      #1e4d6e
+inactive_border_color    #ccdcf4
 
 # Tabs
-active_tab_foreground    #4a4a4a
-active_tab_background    #5d571f
-inactive_tab_foreground  #566976
+active_tab_foreground    #d9e5f7
+active_tab_background    #045690
+inactive_tab_foreground  #045690
 inactive_tab_background  #ccdcf4
