--- a/extras/kitty/themes/light/3/oasis_rose_light_3.conf
+++ b/extras/kitty/themes/light/3/oasis_rose_light_3.conf
@@ -32,19 +32,19 @@ foreground               #594353
 background               #f4ddee
 
 # Selection
-selection_background     #e9badd
-selection_foreground     #594353
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5d561f
-cursor_text_color        #494949
+cursor                   #ab1318
+cursor_text_color        #f4ddee
 
 # Borders (panes)
-active_border_color      #903939
-inactive_border_color    #494949
+active_border_color      #8b2222
+inactive_border_color    #f0d1e8
 
 # Tabs
-active_tab_foreground    #494949
-active_tab_background    #5d561f
-inactive_tab_foreground  #72616c
+active_tab_foreground    #f4ddee
+active_tab_background    #910303
+inactive_tab_foreground  #910303
 inactive_tab_background  #f0d1e8
