--- a/extras/kitty/themes/light/4/oasis_desert_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_desert_light_4.conf
@@ -32,19 +32,19 @@ foreground               #564634
 background               #f5dfc7
 
 # Selection
-selection_background     #eec9a0
-selection_foreground     #564634
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5c561f
-cursor_text_color        #494949
+cursor                   #5e5517
+cursor_text_color        #f5dfc7
 
 # Borders (panes)
-active_border_color      #8f3838
-inactive_border_color    #494949
+active_border_color      #793333
+inactive_border_color    #f3d8ba
 
 # Tabs
-active_tab_foreground    #494949
-active_tab_background    #5c561f
-inactive_tab_foreground  #5c676d
+active_tab_foreground    #f5dfc7
+active_tab_background    #692121
+inactive_tab_foreground  #692121
 inactive_tab_background  #f3d8ba
