--- a/extras/kitty/themes/light/4/oasis_dune_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_dune_light_4.conf
@@ -32,19 +32,19 @@ foreground               #4f4d44
 background               #f0e9d1
 
 # Selection
-selection_background     #e5d8ae
-selection_foreground     #4f4d44
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #605a20
-cursor_text_color        #4c4c4c
+cursor                   #635918
+cursor_text_color        #f0e9d1
 
 # Borders (panes)
-active_border_color      #963b3b
-inactive_border_color    #4c4c4c
+active_border_color      #504d36
+inactive_border_color    #ece3c5
 
 # Tabs
-active_tab_foreground    #4c4c4c
-active_tab_background    #605a20
-inactive_tab_foreground  #72685e
+active_tab_foreground    #f0e9d1
+active_tab_background    #5f5b2b
+inactive_tab_foreground  #5f5b2b
 inactive_tab_background  #ece3c5
