--- a/extras/kitty/themes/light/4/oasis_midnight_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_midnight_light_4.conf
@@ -32,19 +32,19 @@ foreground               #4d443e
 background               #f5d8c7
 
 # Selection
-selection_background     #eebda0
-selection_foreground     #4d443e
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #59531e
-cursor_text_color        #464646
+cursor                   #9b2427
+cursor_text_color        #f5d8c7
 
 # Borders (panes)
-active_border_color      #8a3636
-inactive_border_color    #464646
+active_border_color      #743030
+inactive_border_color    #f3cfba
 
 # Tabs
-active_tab_foreground    #464646
-active_tab_background    #59531e
-inactive_tab_foreground  #5b636b
+active_tab_foreground    #f5d8c7
+active_tab_background    #692121
+inactive_tab_foreground  #692121
 inactive_tab_background  #f3cfba
