--- a/extras/kitty/themes/light/4/oasis_starlight_light_4.conf
+++ b/extras/kitty/themes/light/4/oasis_starlight_light_4.conf
@@ -32,19 +32,19 @@ foreground               #524b3b
 background               #f0e6d1
 
 # Selection
-selection_background     #e5d3ae
-selection_foreground     #524b3b
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #5f5820
-cursor_text_color        #4b4b4b
+cursor                   #125a97
+cursor_text_color        #f0e6d1
 
 # Borders (panes)
-active_border_color      #943a3a
-inactive_border_color    #4b4b4b
+active_border_color      #1f4f71
+inactive_border_color    #ece0c5
 
 # Tabs
-active_tab_foreground    #4b4b4b
-active_tab_background    #5f5820
-inactive_tab_foreground  #626972
+active_tab_foreground    #f0e6d1
+active_tab_background    #035087
+inactive_tab_foreground  #035087
 inactive_tab_background  #ece0c5
