--- a/extras/kitty/themes/light/5/oasis_canyon_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_canyon_light_5.conf
@@ -32,19 +32,19 @@ foreground               #52412d
 background               #f3d5ba
 
 # Selection
-selection_background     #ecbd93
-selection_foreground     #52412d
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #56511d
-cursor_text_color        #444444
+cursor                   #7a410d
+cursor_text_color        #f3d5ba
 
 # Borders (panes)
-active_border_color      #873535
-inactive_border_color    #444444
+active_border_color      #603b17
+inactive_border_color    #f1cdad
 
 # Tabs
-active_tab_foreground    #444444
-active_tab_background    #56511d
-inactive_tab_foreground  #6c5d52
+active_tab_foreground    #f3d5ba
+active_tab_background    #803f00
+inactive_tab_foreground  #803f00
 inactive_tab_background  #f1cdad
