--- a/extras/kitty/themes/light/5/oasis_rose_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_rose_light_5.conf
@@ -32,19 +32,19 @@ foreground               #4a3845
 background               #f0c2e7
 
 # Selection
-selection_background     #e79dd9
-selection_foreground     #4a3845
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #4f4a1a
-cursor_text_color        #3d3d3d
+cursor                   #941015
+cursor_text_color        #f0c2e7
 
 # Borders (panes)
-active_border_color      #7c3131
-inactive_border_color    #3d3d3d
+active_border_color      #751c1c
+inactive_border_color    #edb6e2
 
 # Tabs
-active_tab_foreground    #3d3d3d
-active_tab_background    #4f4a1a
-inactive_tab_foreground  #63565e
+active_tab_foreground    #f0c2e7
+active_tab_background    #800000
+inactive_tab_foreground  #800000
 inactive_tab_background  #edb6e2
