--- a/extras/kitty/themes/light/5/oasis_sol_light_5.conf
+++ b/extras/kitty/themes/light/5/oasis_sol_light_5.conf
@@ -32,19 +32,19 @@ foreground               #5b2e26
 background               #f3bfba
 
 # Selection
-selection_background     #ec9b93
-selection_foreground     #5b2e26
+selection_background     #e1b69d
+selection_foreground     #4e260e
 
 # Cursor
-cursor                   #4c4719
-cursor_text_color        #3a3a3a
+cursor                   #871f20
+cursor_text_color        #f3bfba
 
 # Borders (panes)
-active_border_color      #772f2f
-inactive_border_color    #3a3a3a
+active_border_color      #642626
+inactive_border_color    #f1b3ad
 
 # Tabs
-active_tab_foreground    #3a3a3a
-active_tab_background    #4c4719
-inactive_tab_foreground  #615451
+active_tab_foreground    #f3bfba
+active_tab_background    #6e1212
+inactive_tab_foreground  #6e1212
 inactive_tab_background  #f1b3ad
